Fix multiline posts and comments to render properly, fix opening the full post on link inside post click, fix single post icon having wrong height

--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,8 @@ code {
 .is-fullwidth {
   width: 100%;
 }
+
+.is-pre-wrap {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
